[gd_scene load_steps=3 format=3 uid="uid://diwluksyyoxxa"]

[ext_resource type="Script" path="res://Data/ShopItemScript.gd" id="1_w0r2u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wo7w2"]
bg_color = Color(0.4, 0.0156863, 0.509804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.898039, 0.984314, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="ShopItem" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_w0r2u")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wo7w2")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="BonusIcon" type="TextureRect" parent="Panel/MarginContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="gui_input" from="Panel/MarginContainer/BonusIcon" to="." method="_on_bonus_icon_gui_input"]
